several updates for a boilerplate

--- a/src/css/_bootstrap_mix.scss
+++ b/src/css/_bootstrap_mix.scss
@@ -25,3 +25,6 @@ $container-max-widths: (
 @import "~bootstrap/scss/images";
 @import "~bootstrap/scss/code";
 @import "~bootstrap/scss/grid";
+@import "~bootstrap/scss/nav";
+@import "~bootstrap/scss/navbar";
+@import "~bootstrap/scss/utilities";
