--- a/src/css/_bootstrap_mix.scss
+++ b/src/css/_bootstrap_mix.scss
@@ -27,4 +27,5 @@ $container-max-widths: (
 @import "~bootstrap/scss/grid";
 @import "~bootstrap/scss/nav";
 @import "~bootstrap/scss/navbar";
+@import "~bootstrap/scss/transitions";
 @import "~bootstrap/scss/utilities";
